# Holy

./: .gitignore  API_DOCUMENTATION.md  README.md  docker-compose.yml  neardebug.json  package-lock.json  package.json  test-review.txt
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  prisma.config.ts  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.ts  server.ts
backend/src/config/: index.ts  swagger.ts
backend/src/middleware/: auth.ts
backend/src/middlewares/: auth.ts
backend/src/routes/: auth.ts  authRoutes.ts  bountyRoutes.ts  criteriaRoutes.ts  index.ts  repos.ts  (+2 more)
frontend/nyx-frontend/: Dockerfile  package-lock.json  package.json
shadeagent/shade-agent-v2/: .dockerignore  .env.example  Dockerfile  LICENSE-THIRD-PARTY.txt  NOTICE.txt  README.md  deployment.yaml  docker-compose.yaml  package-lock.json  package.json  sbom.cyclonedx.json  shade-setup.sh  tsconfig.json
shadeagent/shade-agent-v2/agent-contract/: Cargo.toml
shadeagent/shade-agent-v2/agent-contract/src/: lib.rs  owner.rs  views.rs  your_functions.rs
shadeagent/shade-agent-v2/agent-contract/src/internal/: attestation.rs  chainsig.rs  events.rs  helpers.rs  mod.rs  unit_tests.rs
shadeagent/shade-agent-v2/agent-contract/tests/: attestation_tests.rs  cross_contract_tests.rs  large_num_agents_tests.rs  owner_operations_tests.rs  update_contract_tests.rs
shadeagent/shade-agent-v2/agent-contract/tests/contracts/: contract_update.wasm  mock_mpc.wasm
shadeagent/shade-agent-v2/agent-contract/tests/helpers/: mod.rs
(+48 files in other folders)
