[package]
name = "shade-contract-template"
version = "0.1.0"
edition = "2024"
description = "Basic Shade Agents contract template with local dependencies"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
near-sdk = "5.21.0"
serde = { version = "1.0.217", features = ["derive"] }
shade-attestation = "0.1.0"

[dev-dependencies]
near-api = "0.8.2"
near-api-types = "0.8.2"
near-sandbox = "0.3.4"
near-sdk = { version = "5.24.0", features = ["unit-testing"] }
serde_json = "1.0"
shade-attestation = "0.1.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
